# rtfm_stm32_generics

./: Cargo.toml  shell.nix
.cargo/: config
src/: main.rs
