[package]
authors = ["Elisha Hastings <elishahastings@capuk.org>"]
edition = "2018"
readme = "README.md"
name = "testbed"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"

[dependencies.cortex-m-rtfm]
version = "0.5.1"

[dependencies.stm32f1xx-hal]
version = "0.5.1"
features = ["stm32f103", "rt"]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
